# Nova

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: layout.tsx  page.tsx
app/(app)/: layout.tsx
app/(app)/dashboard/: page.tsx
app/(auth)/login/: page.tsx
app/(auth)/signup/: page.tsx
app/demo/: page.tsx
lib/: api.ts
